force-app/main/default/objects/Call_Line__c/fields/PHM_Policy__c.field-meta.xml
<CustomField>
    <fullName>PHM_Policy__c</fullName>
    <formula>IF( Contact__r.Campaign_Type__c == &apos;TelUW_PHM&apos;, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <label>PHM Policy</label>
    <type>Text</type>
</CustomField>