force-app/main/default/objects/Call_Line__c/fields/WelcomeCall_Cooling_Off2__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Cooling_Off2__c</fullName>
    <formula>IF(
    OR(
        Contact__r.Campaign_Type__c = &quot;TelUW&quot;,
        Contact__r.Campaign_Type__c = &quot;TelUW_PHM&quot;
    ),
    DATEVALUE(WelcomeCall_Schedule_Date__c) + 29,
    Contact__r.WelcomeCall_Issued_Date__c + WelcomeCall_Period_Day__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cooling Off</label>
    <type>Date</type>
</CustomField>