force-app/main/default/objects/Call_Line__c/fields/WelcomeCall_Detail_Status__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Detail_Status__c</fullName>
    <label>Detail Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Verification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Belum terima e-pol</fullName>
            </value>
            <value>
                <fullName>Correspondence Address</fullName>
            </value>
            <value>
                <fullName>Customer wants to meet FA</fullName>
                <color>#66E9BD</color>
                <label>Customer wants to meet FA</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>FA perlu menjelaskan kembali</fullName>
            </value>
            <value>
                <fullName>FA Service</fullName>
                <color>#FF0000</color>
                <label>FA Service</label>
            </value>
            <value>
                <fullName>Kecewa dengan layanan FA</fullName>
            </value>
            <value>
                <fullName>Kenal dengan PP</fullName>
            </value>
            <value>
                <fullName>Nasabah butuh dana</fullName>
                <color>#FF9900</color>
                <label>Nasabah butuh dana</label>
            </value>
            <value>
                <fullName>Nasabah merasa tidak pernah diinformasikan akan dihubungi oleh AXA Mandiri</fullName>
            </value>
            <value>
                <fullName>Nasabah Sibuk</fullName>
            </value>
            <value>
                <fullName>Nasabah Takut Penipuan</fullName>
            </value>
            <value>
                <fullName>Nasabah Tidak Mau Dikonfirmasi</fullName>
            </value>
            <value>
                <fullName>Nasabah Tidak Mau Direkam</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
                <color>#FFFF66</color>
                <label>Others</label>
            </value>
            <value>
                <fullName>Penjelasan FA tidak sesuai dengan product spec</fullName>
            </value>
            <value>
                <fullName>Polis tidak sesuai</fullName>
                <color>#0B6FCE</color>
                <label>Polis tidak sesuai</label>
            </value>
            <value>
                <fullName>PP info tidak ketemu dengan FA tapi dengan staff BM/selain FA</fullName>
            </value>
            <value>
                <fullName>Produk Tidak Sesuai</fullName>
                <color>#33CC00</color>
                <label>Produk Tidak Sesuai</label>
            </value>
            <value>
                <fullName>SAGT - Kecewa dengan Service FA</fullName>
            </value>
            <value>
                <fullName>Sedang proses pembatalan polis di POS</fullName>
                <color>#A845DC</color>
                <label>Sedang proses pembatalan polis di POS</label>
            </value>
            <value>
                <fullName>SFAM - Alasan keluarga</fullName>
            </value>
            <value>
                <fullName>SFIN - Nasabah butuh dana</fullName>
            </value>
            <value>
                <fullName>SMIN - Terlalu banyak asuransi</fullName>
            </value>
            <value>
                <fullName>SPRO - Produk tidak sesuai</fullName>
            </value>
            <value>
                <fullName>Suspicious - tidak merasa membeli polis</fullName>
            </value>
            <value>
                <fullName>Terdapat ketidaksesuaian data pada proses NBUW</fullName>
            </value>
            <value>
                <fullName>Tidak kenal dengan PP</fullName>
            </value>
            <value>
                <fullName>Tidak mau sebutkan alasannya</fullName>
            </value>
            <value>
                <fullName>Verification is not succeed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>