force-app/main/default/objects/Call_Line__c/fields/WelcomeCall_Reason_Detail_Status__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_Reason_Detail_Status__c</fullName>
    <label>Reason Detail Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>WelcomeCall_Detail_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ahli waris tidak sesuai keinginan nasabah</fullName>
                <color>#33FF33</color>
                <label>Ahli waris tidak sesuai keinginan nasabah</label>
            </value>
            <value>
                <fullName>Besaran atau masa pembayaran premi</fullName>
            </value>
            <value>
                <fullName>Biaya-biaya Asuransi</fullName>
            </value>
            <value>
                <fullName>Data polis tidak sesuai keinginan nasabah</fullName>
                <color>#000099</color>
                <label>Data polis tidak sesuai keinginan nasabah</label>
            </value>
            <value>
                <fullName>FA menjelaskan jika produk yang dibeli adalah produk tabungan/deposito/reksadana/tabungan haji/produk bank BUKAN produk Asuransi</fullName>
            </value>
            <value>
                <fullName>Fluktuasi nilai Investasi</fullName>
            </value>
            <value>
                <fullName>Informasi tentang investasi yang fluktuatif dan tidak dijamin</fullName>
                <color>#33CC00</color>
                <label>Informasi tentang investasi yang fluktuatif dan tidak dijamin</label>
            </value>
            <value>
                <fullName>Karena nasabah belum terinformasi akan adanya proses welcome call</fullName>
            </value>
            <value>
                <fullName>Klausal kegagalan pendebitan</fullName>
                <color>#A845DC</color>
                <label>Klausal kegagalan pendebitan</label>
            </value>
            <value>
                <fullName>Kondisi pemilihan masa tunggu pada produk PAYDI</fullName>
            </value>
            <value>
                <fullName>Konfirmasi mengenai penalty (MEP)</fullName>
                <color>#FF9900</color>
                <label>Konfirmasi mengenai penalty (MEP)</label>
            </value>
            <value>
                <fullName>Manfaat produk</fullName>
            </value>
            <value>
                <fullName>Masa mempelajari atau membatalkan polis/cooling off</fullName>
            </value>
            <value>
                <fullName>Memastikan nasabah membaca kembali aplikasi sebelum di tandatangani</fullName>
                <color>#FF0000</color>
                <label>Memastikan nasabah membaca kembali aplikasi sebelum di tandatangani</label>
            </value>
            <value>
                <fullName>Nasabah hanya ingin sekali bayar</fullName>
                <color>#33FFFF</color>
                <label>Nasabah hanya ingin sekali bayar</label>
            </value>
            <value>
                <fullName>Nasabah ingin deposito / tabungan / hanya investasi</fullName>
                <color>#F3D904</color>
                <label>Nasabah ingin deposito / tabungan / hanya investasi</label>
            </value>
            <value>
                <fullName>Nasabah ingin produk lain</fullName>
                <color>#A53711</color>
                <label>Nasabah ingin produk lain</label>
            </value>
            <value>
                <fullName>Nasabah merasa pengembalian premi nya terlalu lama</fullName>
            </value>
            <value>
                <fullName>Nasabah Pengajuan penutupan polis di Cabang</fullName>
            </value>
            <value>
                <fullName>Nominal premi dan cara bayar</fullName>
                <color>#0B6FCE</color>
                <label>Nominal premi dan cara bayar</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <color>#FF6666</color>
                <label>Others</label>
            </value>
            <value>
                <fullName>Pengajuan polisnya</fullName>
            </value>
            <value>
                <fullName>Penjelasan pre-existing condition</fullName>
            </value>
            <value>
                <fullName>Produk yang dibeli adalah produk asuransi bukan tabungan/deposito/reksadana/tabungan haji/produk bank lainnya</fullName>
            </value>
            <value>
                <fullName>Tidak dijelaskan biaya asuransi</fullName>
                <color>#666666</color>
                <label>Tidak dijelaskan biaya asuransi</label>
            </value>
            <value>
                <fullName>Tidak dijelaskan fluktuasi nilai investasi</fullName>
                <color>#CC33CC</color>
                <label>Tidak dijelaskan fluktuasi nilai investasi</label>
            </value>
            <value>
                <fullName>Tidak dijelaskan masa pembayaran premi</fullName>
                <color>#F96FB7</color>
                <label>Tidak dijelaskan masa pembayaran premi</label>
            </value>
            <value>
                <fullName>Tidak dijelaskan tentang biaya penalty</fullName>
                <color>#000000</color>
                <label>Tidak dijelaskan tentang biaya penalty</label>
            </value>
            <value>
                <fullName>Tidak dijelaskan tentang manfaat produk</fullName>
            </value>
            <value>
                <fullName>Tidak merasa bertemu FA dan menerima penjelasan mengenai product asuransi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>