force-app/main/default/objects/Call_Line__c/recordTypes/AFI_1.recordType-meta.xml
<RecordType>
    <fullName>AFI_1</fullName>
    <active>true</active>
    <description>PR, Gagal Debet, GRACE PERIOD</description>
    <label>AFI 1</label>
</RecordType>