force-app/main/default/objects/Call_Line__c/recordTypes/AFI_1B.recordType-meta.xml
<RecordType>
    <fullName>AFI_1B</fullName>
    <active>true</active>
    <description>Redemption, Withdrawal, Tahapan, Policy E-Lapse</description>
    <label>AFI 1B</label>
</RecordType>