force-app/main/default/objects/Call_Line__c/recordTypes/AFI_2.recordType-meta.xml
<RecordType>
    <fullName>AFI_2</fullName>
    <active>true</active>
    <description>Update Data</description>
    <label>AFI 2</label>
</RecordType>