force-app/main/default/objects/Call_Line__c/recordTypes/AFI_3.recordType-meta.xml
<RecordType>
    <fullName>AFI_3</fullName>
    <active>true</active>
    <description>Welcome Call</description>
    <label>AFI 3</label>
</RecordType>