force-app/main/default/objects/Call_Line__c/recordTypes/AFI_4.recordType-meta.xml
<RecordType>
    <fullName>AFI_4</fullName>
    <active>true</active>
    <label>AFI 4</label>
    <!---->
</RecordType>