force-app/main/default/objects/Call_Line__c/recordTypes/AGI_Claim.recordType-meta.xml
<RecordType>
    <fullName>AGI_Claim</fullName>
    <active>true</active>
    <description>Record Type for Claim Case Type AGI</description>
    <label>AGI Claim</label>
</RecordType>