force-app/main/default/objects/Call_Line__c/recordTypes/AGI_Complaint_Follow_Up.recordType-meta.xml
<RecordType>
    <fullName>AGI_Complaint_Follow_Up</fullName>
    <active>true</active>
    <description>Record Type for Complaint Follow Up Case Type AGI</description>
    <label>AGI Complaint Follow Up</label>
    <!---->
</RecordType>