force-app/main/default/objects/Call_Line__c/recordTypes/AGI_Default.recordType-meta.xml
<RecordType>
    <fullName>AGI_Default</fullName>
    <active>true</active>
    <description>Default AGI</description>
    <label>AGI Default</label>
    <!---->
</RecordType>