force-app/main/default/objects/Call_Line__c/recordTypes/AGI_Renewal.recordType-meta.xml
<RecordType>
    <fullName>AGI_Renewal</fullName>
    <active>true</active>
    <description>Record Type for Renewal Case Type AGI</description>
    <label>AGI Renewal</label>
</RecordType>