force-app/main/default/objects/Call_Line__c/recordTypes/AGI_SMS_Pull_Confirmation.recordType-meta.xml
<RecordType>
    <fullName>AGI_SMS_Pull_Confirmation</fullName>
    <active>true</active>
    <description>Record Type for AGI SMS Pull Confirmation</description>
    <label>AGI SMS Pull Confirmation</label>
</RecordType>