force-app/main/default/objects/Call_Line__c/recordTypes/AGI_Survey_iAsk.recordType-meta.xml
<RecordType>
    <fullName>AGI_Survey_iAsk</fullName>
    <active>true</active>
    <description>Record Type for AGI Survey iAsk</description>
    <label>AGI Survey iAsk</label>
    <!---->
</RecordType>