force-app/main/default/objects/Call_Line__c/recordTypes/AGI_Survey_iBuy.recordType-meta.xml
<RecordType>
    <fullName>AGI_Survey_iBuy</fullName>
    <active>true</active>
    <description>Record Type for AGI Survey iBuy</description>
    <label>AGI Survey iBuy</label>
    <!---->
</RecordType>