force-app/main/default/objects/Call_Line__c/recordTypes/AGI_Survey_iClaim.recordType-meta.xml
<RecordType>
    <fullName>AGI_Survey_iClaim</fullName>
    <active>true</active>
    <description>Record Type for AGI Survey iClaim</description>
    <label>AGI Survey iClaim</label>
    <!---->
</RecordType>