force-app/main/default/objects/Call_Line__c/recordTypes/AGI_Update_Data.recordType-meta.xml
<RecordType>
    <fullName>AGI_Update_Data</fullName>
    <active>true</active>
    <description>Record Type for Update Data Case Type AGI</description>
    <label>AGI Update Data</label>
    <!---->
</RecordType>