force-app/main/default/objects/Call_Line__c/recordTypes/AGI_Welcome_Call.recordType-meta.xml
<RecordType>
    <fullName>AGI_Welcome_Call</fullName>
    <active>true</active>
    <description>Record Type for Welcome Call Case Type AGI</description>
    <label>AGI Welcome Call</label>
</RecordType>