force-app/main/default/objects/Call_Line__c/recordTypes/ALI_1.recordType-meta.xml
<RecordType>
    <fullName>ALI_1</fullName>
    <active>true</active>
    <description>Default ALI</description>
    <label>ALI 1</label>
    <!---->
</RecordType>