force-app/main/default/objects/Call_Line__c/recordTypes/ALI_10.recordType-meta.xml
<RecordType>
    <fullName>ALI_10</fullName>
    <active>true</active>
    <description>RETENTION</description>
    <label>ALI 10</label>
    <!---->
</RecordType>