force-app/main/default/objects/Call_Line__c/recordTypes/ALI_2.recordType-meta.xml
<RecordType>
    <fullName>ALI_2</fullName>
    <active>true</active>
    <description>Welcome Call Layout</description>
    <label>ALI 2</label>
    <!---->
</RecordType>