force-app/main/default/objects/Call_Line__c/recordTypes/ALI_3.recordType-meta.xml
<RecordType>
    <fullName>ALI_3</fullName>
    <active>true</active>
    <description>Reinstate Layout</description>
    <label>ALI 3</label>
</RecordType>