force-app/main/default/objects/Call_Line__c/recordTypes/ALI_4.recordType-meta.xml
<RecordType>
    <fullName>ALI_4</fullName>
    <active>true</active>
    <description>Premium FU Layout</description>
    <label>ALI 4</label>
</RecordType>