force-app/main/default/objects/Call_Line__c/recordTypes/ALI_5.recordType-meta.xml
<RecordType>
    <fullName>ALI_5</fullName>
    <active>true</active>
    <description>ALI Claim Layout</description>
    <label>ALI 5</label>
    <!---->
</RecordType>