force-app/main/default/objects/Call_Line__c/recordTypes/ALI_6.recordType-meta.xml
<RecordType>
    <fullName>ALI_6</fullName>
    <active>true</active>
    <description>UpdateData Layout</description>
    <label>ALI 6</label>
    <!---->
</RecordType>