force-app/main/default/objects/Call_Line__c/recordTypes/ALI_7.recordType-meta.xml
<RecordType>
    <fullName>ALI_7</fullName>
    <active>true</active>
    <description>NCB Layout</description>
    <label>ALI 7</label>
    <!---->
</RecordType>