force-app/main/default/objects/Call_Line__c/recordTypes/ALI_8.recordType-meta.xml
<RecordType>
    <fullName>ALI_8</fullName>
    <active>true</active>
    <description>SurveyFeedback Layout</description>
    <label>ALI 8</label>
</RecordType>