force-app/main/default/objects/Call_Line__c/recordTypes/ALI_9.recordType-meta.xml
<RecordType>
    <fullName>ALI_9</fullName>
    <active>true</active>
    <description>CollectionTask Layout</description>
    <label>ALI 9</label>
</RecordType>