force-app/main/default/objects/Call_Line__c/recordTypes/AMFS_1.recordType-meta.xml
<RecordType>
    <fullName>AMFS_1</fullName>
    <active>true</active>
    <label>AMFS 1</label>
</RecordType>