force-app/main/default/objects/Call_Line__c/recordTypes/AMFS_2.recordType-meta.xml
<RecordType>
    <fullName>AMFS_2</fullName>
    <active>true</active>
    <label>AMFS 2</label>
</RecordType>