force-app/main/default/objects/Call_Line__c/recordTypes/AMFS_3.recordType-meta.xml
<RecordType>
    <fullName>AMFS_3</fullName>
    <active>true</active>
    <label>AMFS 3</label>
    <!---->
</RecordType>