force-app/main/default/objects/Call_Line__c/recordTypes/AMFS_4.recordType-meta.xml
<RecordType>
    <fullName>AMFS_4</fullName>
    <active>true</active>
    <label>AMFS 4</label>
</RecordType>