force-app/main/default/objects/Call_Line__c/recordTypes/Call_Line_Customer_Segmentation.recordType-meta.xml
<RecordType>
    <fullName>Call_Line_Customer_Segmentation</fullName>
    <active>true</active>
    <label>Call Line Customer Segmentation</label>
</RecordType>