force-app/main/default/objects/Call_Line__c/recordTypes/Callback.recordType-meta.xml
<RecordType>
    <fullName>Callback</fullName>
    <active>true</active>
    <label>Callback</label>
</RecordType>