force-app/main/default/objects/Call_Line__c/recordTypes/Collection_AMFS_1.recordType-meta.xml
<RecordType>
    <fullName>Collection_AMFS_1</fullName>
    <active>true</active>
    <description>Untuk campaign Renewal Reminder</description>
    <label>Collection AMFS 1</label>
    <!---->
</RecordType>