force-app/main/default/objects/Call_Line__c/recordTypes/Collection_AMFS_2.recordType-meta.xml
<RecordType>
    <fullName>Collection_AMFS_2</fullName>
    <active>true</active>
    <description>Untuk campaign Lapse Konven</description>
    <label>Collection AMFS 2</label>
</RecordType>