force-app/main/default/objects/Call_Line__c/recordTypes/Collection_AMFS_3.recordType-meta.xml
<RecordType>
    <fullName>Collection_AMFS_3</fullName>
    <active>true</active>
    <description>Untuk campaign MKP</description>
    <label>Collection AMFS 3</label>
    <!---->
</RecordType>