force-app/main/default/objects/Call_Line__c/recordTypes/Collection_AMFS_4.recordType-meta.xml
<RecordType>
    <fullName>Collection_AMFS_4</fullName>
    <active>true</active>
    <description>Untuk campaign Cuti Premi</description>
    <label>Collection AMFS 4</label>
</RecordType>