force-app/main/default/objects/Call_Line__c/recordTypes/Collection_AMFS_5.recordType-meta.xml
<RecordType>
    <fullName>Collection_AMFS_5</fullName>
    <active>true</active>
    <description>Untuk campaign RTU</description>
    <label>Collection AMFS 5</label>
    <!---->
</RecordType>