force-app/main/default/objects/Call_Line__c/recordTypes/Collection_AMFS_7.recordType-meta.xml
<RecordType>
    <fullName>Collection_AMFS_7</fullName>
    <active>true</active>
    <description>Untuk campaign Lapse TM</description>
    <label>Collection AMFS 7</label>
    <!---->
</RecordType>