force-app/main/default/objects/Call_Line__c/recordTypes/Collection_AMFS_8.recordType-meta.xml
<RecordType>
    <fullName>Collection_AMFS_8</fullName>
    <active>true</active>
    <description>Untuk campaign Redemption TM</description>
    <label>Collection AMFS 8</label>
</RecordType>