force-app/main/default/objects/Call_Line__c/recordTypes/Conservation.recordType-meta.xml
<RecordType>
    <fullName>Conservation</fullName>
    <active>true</active>
    <label>Conservation</label>
</RecordType>