force-app/main/default/objects/Call_Line__c/recordTypes/MAGI_1.recordType-meta.xml
<RecordType>
    <fullName>MAGI_1</fullName>
    <active>true</active>
    <label>MAGI 1</label>
    <!---->
</RecordType>