force-app/main/default/objects/Call_Line__c/recordTypes/MAGI_2.recordType-meta.xml
<RecordType>
    <fullName>MAGI_2</fullName>
    <active>true</active>
    <label>MAGI 2</label>
</RecordType>