force-app/main/default/objects/Call_Line__c/recordTypes/MAGI_3.recordType-meta.xml
<RecordType>
    <fullName>MAGI_3</fullName>
    <active>true</active>
    <label>MAGI 3</label>
    <!---->
</RecordType>