force-app/main/default/objects/Call_Line__c/recordTypes/MAGI_4.recordType-meta.xml
<RecordType>
    <fullName>MAGI_4</fullName>
    <active>true</active>
    <label>MAGI 4</label>
-->
</RecordType>