force-app/main/default/objects/Call_Line__c/recordTypes/MAGI_5.recordType-meta.xml
<RecordType>
    <fullName>MAGI_5</fullName>
    <active>true</active>
    <label>MAGI 5</label>
    <!---->
</RecordType>