force-app/main/default/objects/Call_Line__c/recordTypes/MAGI_6.recordType-meta.xml
<RecordType>
    <fullName>MAGI_6</fullName>
    <active>true</active>
    <label>MAGI 6</label>
    <!---->
</RecordType>