force-app/main/default/objects/Call_Line__c/recordTypes/MAGI_7.recordType-meta.xml
<RecordType>
    <fullName>MAGI_7</fullName>
    <active>true</active>
    <label>MAGI 7</label>
    <!---->
</RecordType>