force-app/main/default/objects/Call_Line__c/recordTypes/MAGI_8.recordType-meta.xml
<RecordType>
    <fullName>MAGI_8</fullName>
    <active>true</active>
    <label>MAGI 8</label>
</RecordType>