force-app/main/default/objects/Call_Line__c/recordTypes/MAGI_9.recordType-meta.xml
<RecordType>
    <fullName>MAGI_9</fullName>
    <active>true</active>
    <label>MAGI 9</label>
    <!---->
</RecordType>