force-app/main/default/objects/Call_Line__c/recordTypes/NonSurveyActivity.recordType-meta.xml
<RecordType>
    <fullName>NonSurveyActivity</fullName>
    <active>true</active>
    <label>NonSurveyActivity</label>
</RecordType>