force-app/main/default/objects/Call_Line__c/recordTypes/SurveyActivity.recordType-meta.xml
<RecordType>
    <fullName>SurveyActivity</fullName>
    <active>true</active>
    <label>SurveyActivity</label>
    <!---->
</RecordType>