force-app/main/default/objects/Call_Line__c/recordTypes/Welcome_Call.recordType-meta.xml
<RecordType>
    <fullName>Welcome_Call</fullName>
    <active>true</active>
    <label>Welcome Call</label>
    <!---->
</RecordType>