force-app/main/default/objects/Call_Line__c/validationRules/Format_Call_Notes_2_Teleclaim.validationRule-meta.xml
<ValidationRule>
    <fullName>Format_Call_Notes_2_Teleclaim</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Entity__c, &quot;AMFS&quot;),
  ISPICKVAL(Case_Type__c, &quot;Teleclaim&quot;),
  NOT(ISBLANK(Call_Notes_2__c)),
  NOT(
    REGEX(
      Call_Notes_2__c,
      &quot;^[0-9]+(;[0-9]+)*$&quot;
    )
  )
)</errorConditionFormula>
    <errorDisplayField>Call_Notes_2__c</errorDisplayField>
    <errorMessage>Format call notes 2 tidak valid. 
Gunakan format: claim number1;claim number2</errorMessage>
</ValidationRule>