force-app/main/default/objects/Call_Line__c/validationRules/Remarks_Character_Limits.validationRule-meta.xml
<ValidationRule>
    <fullName>Remarks_Character_Limits</fullName>
    <active>true</active>
    <description>Character input remarks for all CL Teleservice PBC</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Entity__c, &quot;AMFS&quot;),
  
    AND(
      OR(
        ISPICKVAL(Case_Type__c, &quot;Teleclaim&quot;),
        ISPICKVAL(Case_Type__c, &quot;No Claim Bonus&quot;),
        ISPICKVAL(Case_Type__c, &quot;Others&quot;),
        ISPICKVAL(Case_Type__c, &quot;ICF Survey Inquiry&quot;),
        ISPICKVAL(Case_Type__c, &quot;ICF Survey Claim&quot;),
        ISPICKVAL(Case_Type__c, &quot;Withdrawal&quot;),
        ISPICKVAL(Case_Type__c, &quot;Collection&quot;),
        ISPICKVAL(Case_Type__c, &quot;Adhoc&quot;),
        ISPICKVAL(Case_Type__c, &quot;DMU&quot;)
      ),
      LEN(Call_Remarks__c) &gt;= 8000
    )
 
)</errorConditionFormula>
    <errorMessage>remarks should be less than 8000 characters</errorMessage>
</ValidationRule>