force-app/main/default/objects/Call_Line__c/validationRules/WelcomeCall_EditedCallLineResult_ARSI.validationRule-meta.xml
<ValidationRule>
    <fullName>WelcomeCall_EditedCallLineResult_ARSI</fullName>
    <active>true</active>
    <description>Record Type Welcome Call. Test perbaikan ARSI 26/03/2026</description>
    <errorConditionFormula>IF(AND(AND(OR(AND(NOT(ISCHANGED(WelcomeCall_Call_Line_Status__c)),Text(WelcomeCall_Call_Line_Status__c) == &apos;Closed&apos;), Text(PRIORVALUE(WelcomeCall_Call_Line_Status__c)) == &apos;Closed&apos;), RecordType.Name ==&apos;Welcome Call&apos;), NOT(OR( $Profile.Name == &apos;System Administrator&apos;, $Profile.Name == &apos;Adminitrator Sistem&apos;, $Profile.Name = &apos;Supervisor-AMFS&apos;, $Profile.Name = &apos;Other Dept AMFS&apos;,$Profile.Name = &apos;Supervisor Collection-AMFS&apos; ))), true, false) &amp;&amp; RecordType.Name = &apos;Welcome Call&apos; &amp;&amp; !ISCHANGED(Attemp_Call__c) &amp;&amp; !ISCHANGED(Attempt_call_Day__c)</errorConditionFormula>
    <errorMessage>Call Line yang sudah CLOSED hanya bisa di edit oleh Supervisor</errorMessage>
</ValidationRule>